--- a/NigraanWeb/dm/templates/app/index.html
+++ b/NigraanWeb/dm/templates/app/index.html
@@ -17,13 +17,14 @@
 			}
 		});
 	</script>
-
 	<!-- CSS Files -->
 	<link rel="stylesheet" href="../../static/assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../static/assets/css/atlantis.min.css">
 
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link rel="stylesheet" href="../../static/assets/css/demo.css">
+	<!-- Nigraan Custom CSS -->
+	<link rel="stylesheet" href="../../static/assets/css/nigraan-custom.css">
     <style>
         pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
         .string { color: green; }
@@ -36,11 +37,10 @@
 <body>
 	<div class="wrapper">
 		<div class="main-header">
-			<!-- Logo Header -->
-			<div class="logo-header" data-background-color="blue">
+			<!-- Logo Header -->			<div class="logo-header" data-background-color="blue">
 
 				<a href="index.html" class="logo">
-					<h3 class="text-white navbar-brand">DeepNet4Mals</h3>
+					<h3 class="text-white navbar-brand">Nigraan Antivirus</h3>
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon">
@@ -182,7 +182,6 @@
 			</div>
 		</div>
 		<!-- End Sidebar -->
-
 		<div class="main-panel">
 			<div class="content">
 				<div class="panel-header bg-primary-gradient">
@@ -190,7 +189,7 @@
 						<div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
 							<div>
 								<h2 class="text-white pb-2 fw-bold">Analysis Results</h2>
-								<h5 class="text-white op-7 mb-2">Results given based on version of : 04/04/2020</h5>
+								<h5 class="text-white op-7 mb-2">Powered by AI-based malware detection</h5>
 							</div>
 							<div class="ml-md-auto py-2 py-md-0">
 								<a href="#" class="btn btn-white btn-border btn-round mr-2">Save</a>
