--- a/NigraanWeb/dm/templates/app/scanpage.html
+++ b/NigraanWeb/dm/templates/app/scanpage.html
@@ -36,25 +36,22 @@
 	</style>
 </head>
 <body>	<div class="wrapper bg-white">
-		<div class="main-header">
-			<div class="logo-header" data-background-color="blue">
-				<a href="index.html" class="nav-link">
+		<div class="main-header">			<div class="logo-header" data-background-color="blue">
+				<a href="/" class="nav-link">
 					<h3 class="text-white">
                         Nigraan
-                    </h3>
-				</a>
+                    </h3></a>
 				<button class="topbar-toggler more"><i class="icon-options-vertical"></i></button>
 				<div class="nav-toggle">
 					<button class="btn btn-toggle toggle-sidebar">
 						<i class="icon-screen-desktop"></i>
 					</button>
 				</div>
-			</div>
-			<nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
+			</div>			<nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
 				<div class="container-fluid">
 					<ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
 						<li class="nav-item">
-							<a href="{{ '/scan/results' }}" class="nav-link">
+							<a href="/scan/results" class="nav-link">
 								<h4>
                                     Analysis board
                                     <i class="icon-arrow-right"></i>
