--- a/NigraanWeb/dm/templates/app/charts/charts.html
+++ b/NigraanWeb/dm/templates/app/charts/charts.html
@@ -17,20 +17,20 @@
 			}
 		});
 	</script>
-
 	<!-- CSS Files -->
 	<link rel="stylesheet" href="../../../static/assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../../static/assets/css/atlantis.min.css">
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link rel="stylesheet" href="../../../static/assets/css/demo.css">
+	<!-- Nigraan Custom CSS -->
+	<link rel="stylesheet" href="../../../static/assets/css/nigraan-custom.css">
 </head>
 <body>
 	<div class="wrapper">
 		<div class="main-header">
-			<!-- Logo Header -->
-			<div class="logo-header" data-background-color="blue">
+			<!-- Logo Header -->			<div class="logo-header" data-background-color="blue">
 				
-				<a href="../index.html" class="logo">
+				<a href="/" class="logo">
 					<img src="../../../static/assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -133,31 +133,30 @@
 		<div class="sidebar sidebar-style-2">
 			
 			<div class="sidebar-wrapper scrollbar scrollbar-inner">
-				<div class="sidebar-content">
-					<ul class="nav nav-primary">
+				<div class="sidebar-content">					<ul class="nav nav-primary">
 						<li class="nav-item">
-							<a href="{{ '/' }}" class="collapsed" aria-expanded="false">
+							<a href="/">
 								<i class="fas fa-home"></i>
 								<p>Analysis board</p>
 								<span class="caret"></span>
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="{{ '/data_set' }}">
+							<a href="/dataset">
 								<i class="fas fa-table"></i>
 								<p>DataSet</p>
 								<span class="caret"></span>
 							</a>
 						</li>
 						<li class="nav-item active submenu">
-							<a  href="#">
+							<a href="/learning_board">
 								<i class="far fa-chart-bar"></i>
 								<p>Learning board</p>
 								<span class="caret"></span>
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="{{ '/model' }}">
+							<a href="/model">
 								<i class="fas fa-desktop"></i>
 								<p>Model</p>
 							</a>
