--- a/NigraanWeb/dm/templates/app/charts/charts.html
+++ b/NigraanWeb/dm/templates/app/charts/charts.html
@@ -326,28 +326,27 @@
 				</div>
 			</div>
 			<footer class="footer">
-				<div class="container-fluid">
-					<nav class="pull-left">
+				<div class="container-fluid">					<nav class="pull-left">
 						<ul class="nav">
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									Islem BOUZENIA
+									Team Nigraan
 								</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									ESI
+									Support
 								</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									SIQ
+									Documentation
 								</a>
 							</li>
 						</ul>
 					</nav>
 					<div class="copyright ml-auto">
-                        2020
+                        © 2025 Team Nigraan - All Rights Reserved
 					</div>
 				</div>
 			</footer>
