--- a/NigraanWeb/dm/templates/app/components/sweetalert.html
+++ b/NigraanWeb/dm/templates/app/components/sweetalert.html
@@ -630,25 +630,25 @@
 					<nav class="pull-left">
 						<ul class="nav">
 							<li class="nav-item">
-								<a class="nav-link" href="https://www.themekita.com">
-									ThemeKita
+								<a class="nav-link" href="#">
+									Team Nigraan
 								</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									Help
+									Support
 								</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									Licenses
+									Documentation
 								</a>
 							</li>
 						</ul>
 					</nav>
 					<div class="copyright ml-auto">
-						2018, made with <i class="fa fa-heart heart text-danger"></i> by <a href="https://www.themekita.com">ThemeKita</a>
-					</div>				
+						© 2025 Team Nigraan - All Rights Reserved
+					</div>
 				</div>
 			</footer>
 		</div>
