--- a/NigraanWeb/dm/templates/app/index.html
+++ b/NigraanWeb/dm/templates/app/index.html
@@ -298,28 +298,27 @@
 				</div>
 			</div>
 			<footer class="footer">
-				<div class="container-fluid">
-					<nav class="pull-left">
+				<div class="container-fluid">					<nav class="pull-left">
 						<ul class="nav">
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									Islem BOUZENIA
+									Team Nigraan
 								</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									Help
+									Support
 								</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									Licenses
+									Documentation
 								</a>
 							</li>
 						</ul>
 					</nav>
 					<div class="copyright ml-auto">
-						2018, made with <i class="fa fa-heart heart text-danger"></i> by <a href="https://www.themekita.com">ThemeKita</a>
+						© 2025 Team Nigraan - All Rights Reserved
 					</div>
 				</div>
 			</footer>
