--- a/NigraanWeb/dm/templates/app/tables/tables.html
+++ b/NigraanWeb/dm/templates/app/tables/tables.html
@@ -974,19 +974,19 @@
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									Help
+									Support
 								</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">
-									Licenses
+									Documentation
 								</a>
 							</li>
 						</ul>
 					</nav>
 					<div class="copyright ml-auto">
-						2018, made with <i class="fa fa-heart heart text-danger"></i> by <a href="https://www.themekita.com">ThemeKita</a>
-					</div>				
+						© 2025 Team Nigraan - All Rights Reserved
+					</div>
 				</div>
 			</footer>
 		</div>
