sidebar fix for model page

--- a/NigraanWeb/dm/templates/app/tables/tables.html
+++ b/NigraanWeb/dm/templates/app/tables/tables.html
@@ -27,11 +27,10 @@
 <body>
 	<div class="wrapper">
 		<div class="main-header">
-			<!-- Logo Header -->
-			<div class="logo-header" data-background-color="blue">
+			<!-- Logo Header -->			<div class="logo-header" data-background-color="blue">
 				
 				<a href="../index.html" class="logo">
-					<img src="../../assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
+					<h3 class="text-white navbar-brand">Nigraan</h3>
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon">
@@ -247,21 +246,19 @@
 									</div>
 								</div>
 							</div>
-						</li>
-						<li class="nav-item dropdown hidden-caret">
+						</li>						<li class="nav-item dropdown hidden-caret">
 							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
 								<div class="avatar-sm">
-									<img src="../../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
+									<span class="avatar-title rounded-circle border border-white">N</span>
 								</div>
 							</a>
 							<ul class="dropdown-menu dropdown-user animated fadeIn">
 								<div class="dropdown-user-scroll scrollbar-outer">
 									<li>
 										<div class="user-box">
-											<div class="avatar-lg"><img src="../../assets/img/profile.jpg" alt="image profile" class="avatar-img rounded"></div>
 											<div class="u-text">
-												<h4>Hizrian</h4>
-												<p class="text-muted">hello@example.com</p><a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
+												<h4>Nigraan</h4>
+												<p class="text-muted">nigraan@example.com</p>
 											</div>
 										</div>
 									</li>
@@ -285,18 +282,14 @@
 		</div>
 		<!-- Sidebar -->
 		<div class="sidebar sidebar-style-2">
-			
-			<div class="sidebar-wrapper scrollbar scrollbar-inner">
+					<div class="sidebar-wrapper scrollbar scrollbar-inner">
 				<div class="sidebar-content">
 					<div class="user">
-						<div class="avatar-sm float-left mr-2">
-							<img src="../../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
-						</div>
 						<div class="info">
 							<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 								<span>
-									Hizrian
-									<span class="user-level">Administrator</span>
+									Nigraan Antivirus
+									<span class="user-level">Malware Analysis System</span>
 									<span class="caret"></span>
 								</span>
 							</a>
