--- a/NigraanWeb/dm/templates/app/compact-sidebar.html
+++ b/NigraanWeb/dm/templates/app/compact-sidebar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Atlantis Lite - Bootstrap 4 Admin Dashboard</title>
+	<title>Nigraan - Antivirus Dashboard</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
 	<link rel="icon" href="../assets/img/icon.ico" type="image/x-icon"/>
 
@@ -30,9 +30,8 @@
 		<div class="main-header">
 			<!-- Logo Header -->
 			<div class="logo-header" data-background-color="blue">
-				
-				<a href="index.html" class="logo ml-auto mr-auto">
-					<img src="../assets/img/logo.svg" alt="navbar brand" class="navbar-brand" height="35">
+						<a href="index.html" class="logo ml-auto mr-auto">
+					<h3 class="text-white">Nigraan</h3>
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon">
@@ -246,22 +245,19 @@
 								</div>
 							</div>
 						</li>
-						<li class="nav-item dropdown hidden-caret">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
-								<div class="avatar-sm">
-									<img src="../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
-								</div>
-							</a>
+						<li class="nav-item dropdown hidden-caret">									<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
+										<div class="avatar-sm">
+											<i class="fas fa-user-circle fa-2x text-white"></i>
+										</div>
+									</a>
 							<ul class="dropdown-menu dropdown-user animated fadeIn">
 								<div class="dropdown-user-scroll scrollbar-outer">
-									<li>
-										<div class="user-box">
-											<div class="avatar-lg"><img src="../assets/img/profile.jpg" alt="image profile" class="avatar-img rounded"></div>
-											<div class="u-text">
-												<h4>Hizrian</h4>
-												<p class="text-muted">hello@example.com</p><a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
+									<li>											<div class="user-box">
+												<div class="u-text">
+													<h4>Nigraan User</h4>
+													<p class="text-muted">user@nigraan.com</p><a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
+												</div>
 											</div>
-										</div>
 									</li>
 									<li>
 										<div class="dropdown-divider"></div>
