--- a/NigraanWeb/dm/templates/app/static-sidebar.html
+++ b/NigraanWeb/dm/templates/app/static-sidebar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Atlantis Lite - Bootstrap 4 Admin Dashboard</title>
+	<title>Nigraan - Antivirus Dashboard</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
 	<link rel="icon" href="../assets/img/icon.ico" type="image/x-icon"/>
 
@@ -30,9 +30,8 @@
 		<div class="main-header">
 			<!-- Logo Header -->
 			<div class="logo-header" data-background-color="blue">
-				
-				<a href="index.html" class="logo">
-					<img src="../assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
+						<a href="index.html" class="logo">
+					<h3 class="text-white navbar-brand">Nigraan Antivirus</h3>
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon">
@@ -251,20 +250,17 @@
 								</div>
 							</div>
 						</li>
-						<li class="nav-item dropdown hidden-caret">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
+						<li class="nav-item dropdown hidden-caret">							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
 								<div class="avatar-sm">
-									<img src="../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
+									<i class="fas fa-user-circle fa-2x text-white"></i>
 								</div>
 							</a>
 							<ul class="dropdown-menu dropdown-user animated fadeIn">
 								<div class="dropdown-user-scroll scrollbar-outer">
-									<li>
-										<div class="user-box">
-											<div class="avatar-lg"><img src="../assets/img/profile.jpg" alt="image profile" class="avatar-img rounded"></div>
+									<li>										<div class="user-box">
 											<div class="u-text">
-												<h4>Hizrian</h4>
-												<p class="text-muted">hello@example.com</p><a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
+												<h4>Nigraan User</h4>
+												<p class="text-muted">user@nigraan.com</p><a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
 											</div>
 										</div>
 									</li>
@@ -291,15 +287,15 @@
 			<!-- Sidebar -->
 			<div class="sidebar sidebar-style-2">			
 				<div class="sidebar-wrapper scrollbar scrollbar-inner">
-					<div class="sidebar-content">
-						<div class="user">
-							<div class="avatar-sm float-left mr-2">
-								<img src="../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
-							</div>
-							<div class="info">
-								<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
-									<span>
-										Hizrian
+					<div class="sidebar-content">					<div class="user">
+						<div class="info">
+							<a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
+								<span>
+									Nigraan User
+									<span class="user-level">Security Admin</span>
+									<span class="caret"></span>
+								</span>
+							</a>
 										<span class="user-level">Administrator</span>
 										<span class="caret"></span>
 									</span>
