--- a/NigraanWeb/dm/templates/app/charts/charts.html
+++ b/NigraanWeb/dm/templates/app/charts/charts.html
@@ -16,10 +16,9 @@
 				sessionStorage.fonts = true;
 			}
 		});
-	</script>
-	<!-- CSS Files -->
+	</script>	<!-- CSS Files -->
 	<link rel="stylesheet" href="../../../static/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../../../static/assets/css/atlantis.min.css">
+	<link rel="stylesheet" href="../../../static/assets/css/nigraan.min.css">
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link rel="stylesheet" href="../../../static/assets/css/demo.css">
 	<!-- Nigraan Custom CSS -->
@@ -435,10 +434,9 @@
 	<script src="../../../static/assets/js/plugin/chart.js/chart.min.js"></script>
 	
 	<!-- jQuery Scrollbar -->
-	<script src="../../../static/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
-	<!-- Atlantis JS -->
-	<script src="../../../static/assets/js/atlantis.min.js"></script>
-	<!-- Atlantis DEMO methods, don't include it in your project! -->
+	<script src="../../../static/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>	<!-- Nigraan JS -->
+	<script src="../../../static/assets/js/nigraan.min.js"></script>
+	<!-- Nigraan DEMO methods, don't include it in your project! -->
 	<script src="../../../static/assets/js/setting-demo2.js"></script>
 	<script>
 
