--- a/NigraanWeb/dm/templates/app/index.html
+++ b/NigraanWeb/dm/templates/app/index.html
@@ -16,10 +16,9 @@
 				sessionStorage.fonts = true;
 			}
 		});
-	</script>
-	<!-- CSS Files -->
+	</script>	<!-- CSS Files -->
 	<link rel="stylesheet" href="../../static/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../../static/assets/css/atlantis.min.css">
+	<link rel="stylesheet" href="../../static/assets/css/nigraan.min.css">
 
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link rel="stylesheet" href="../../static/assets/css/demo.css">
