--- a/NigraanWeb/dm/templates/app/scanpage.html
+++ b/NigraanWeb/dm/templates/app/scanpage.html
@@ -15,9 +15,8 @@
 			active: function() {
 				sessionStorage.fonts = true;
 			}
-		});	</script>
-	<link rel="stylesheet" href="../../static/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../../static/assets/css/atlantis.min.css">
+		});	</script>	<link rel="stylesheet" href="../../static/assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../../static/assets/css/nigraan.min.css">
 	<link rel="stylesheet" href="../../static/assets/css/nigraan-custom.css">
 	<style>
 		/* Additional page-specific styles */
@@ -102,5 +101,5 @@
 <script type="text/javascript" src="../../static/assets/js/plugin/jqvmap/maps/jquery.vmap.world.js" charset="utf-8"></script>
 <script src="../../static/assets/js/plugin/chart-circle/circles.min.js"></script>
 <script src="../../static/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
-<script src="../../static/assets/js/atlantis.min.js"></script>
+<script src="../../static/assets/js/nigraan.min.js"></script>
 </html>
