--- a/NigraanWeb/dm/templates/app/tables/datatables.html
+++ b/NigraanWeb/dm/templates/app/tables/datatables.html
@@ -16,10 +16,9 @@
 				sessionStorage.fonts = true;
 			}
 		});
-	</script>
-	<!-- CSS Files -->
+	</script>	<!-- CSS Files -->
 	<link rel="stylesheet" href="../../../static/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../../../static/assets/css/atlantis.min.css">
+	<link rel="stylesheet" href="../../../static/assets/css/nigraan.min.css">
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link rel="stylesheet" href="../../../static/assets/css/demo.css">
 	<!-- Nigraan Custom CSS -->
@@ -34,9 +33,8 @@
 	<!-- jQuery Scrollbar -->
 	<script src="../../../static/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 	<!-- Datatables -->
-	<script src="../../../static/assets/js/plugin/datatables/datatables.min.js"></script>
-	<!-- Atlantis JS -->
-	<script src="../../../static/assets/js/atlantis.min.js"></script>
+	<script src="../../../static/assets/js/plugin/datatables/datatables.min.js"></script>	<!-- Nigraan JS -->
+	<script src="../../../static/assets/js/nigraan.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='assets/js-plus/DataSetReader.js') }}"></script>
 </head>
 <body>
@@ -877,7 +875,7 @@ $(document).ready(function () {
 	</div>
 	<!--   Core JS Files   -->
 
-	<!-- Atlantis DEMO methods, don't include it in your project! -->
+	<!-- Nigraan DEMO methods, don't include it in your project! -->
 	<script src="../../../static/assets/js/setting-demo2.js"></script>
     <script src="../../../static/assets/js/plotly-min.js"></script>
 	<script >
