--- a/NigraanWeb/dm/templates/app/widgets.html
+++ b/NigraanWeb/dm/templates/app/widgets.html
@@ -16,10 +16,9 @@
 				sessionStorage.fonts = true;
 			}
 		});
-	</script>
-	<!-- CSS Files -->
+	</script>	<!-- CSS Files -->
 	<link rel="stylesheet" href="../../static/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../../static/assets/css/atlantis.min.css">
+	<link rel="stylesheet" href="../../static/assets/css/nigraan.min.css">
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link rel="stylesheet" href="../../static/assets/css/demo.css">
 	<!-- Nigraan Custom CSS -->
@@ -129,7 +128,9 @@
 				<div class="sidebar-content">
 					<div class="user">
 						<div class="avatar-sm float-left mr-2">
-							<img src="../../static/assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
+							<div class="avatar-sm">
+								<i class="fas fa-user-circle fa-2x text-white"></i>
+							</div>
 						</div>
 					</div>					<ul class="nav nav-primary">
 						<li class="nav-item">
@@ -537,10 +538,9 @@
 	<!-- jQuery Scrollbar -->
 	<script src="../../static/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 	<!-- jQuery Sparkline -->
-	<script src="../../static/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
-	<!-- Atlantis JS -->
-	<script src="../../static/assets/js/atlantis.min.js"></script>
-	<!-- Atlantis DEMO methods, don't include it in your project! -->
+	<script src="../../static/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>	<!-- Nigraan JS -->
+	<script src="../../static/assets/js/nigraan.min.js"></script>
+	<!-- Nigraan DEMO methods, don't include it in your project! -->
 	<script src="../../static/assets/js/setting-demo.js"></script>
 	<script>
 		$('#lineChart').sparkline([102,109,120,99,110,105,115], {
