--- a/NigraanWeb/dm/templates/app/index.html
+++ b/NigraanWeb/dm/templates/app/index.html
@@ -190,7 +190,7 @@
 								<h5 class="text-white op-7 mb-2">Powered by AI-based malware detection</h5>
 							</div>							<div class="ml-md-auto py-2 py-md-0">
 								<a href="#" class="btn btn-white btn-border btn-round mr-2">Save</a>
-								<a href="/" class="btn btn-secondary btn-round">New Scan</a>
+								<a href="/scan" class="btn btn-secondary btn-round">New Scan</a>
 							</div>
 						</div>
 					</div>
